# RawdataDecoder

./: .clang-format  .codespellrc  .gitattributes  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  AHCALDatafiles.toml  CMakeLists.txt  CPPLINT.cfg  ECALDatafiles.toml  LICENSE  README.md
apps/: CMakeLists.txt  LegacyECALRawdataToROOT.cc  RawdataToLCIO.cc  RawdataToROOT.cc
apps/compare/: CMakeLists.txt
apps/compare/include/: CEPCCDRstyle.h  Comparator.h  Ploter.h
apps/compare/src/: CEPCCDRstyle.cc  Comparaison.cc  Comparator.cc  Ploter.cc
cmake/: RawdataDecoderConfig.cmake.in
libs/: CMakeLists.txt
libs/core/: CMakeLists.txt
libs/core/include/: AppVersion.h.in  Bits.h  Buffer.h  BufferLooper.h  CellID.hpp  Data.h  Exception.h  Filesystem.h  Formatters.h  Interface.h  Timer.h  Version.h  VersionInfos.h
libs/core/src/: CellID.cpp  Filesystem.cc  Formatters.cc  Version.cc
libs/interfaces/: CMakeLists.txt
libs/interfaces/LCIOWriter/: CMakeLists.txt
libs/interfaces/LCIOWriter/include/: LCIOWriter.h
libs/interfaces/LCIOWriter/src/: LCIOWriter.cc
libs/interfaces/ROOTWriter/: CMakeLists.txt
libs/interfaces/ROOTWriter/include/: ROOTWriter.h
libs/interfaces/ROOTWriter/src/: ROOTWriter.cc
libs/interfaces/RawdataReader/: CMakeLists.txt
libs/interfaces/RawdataReader/include/: RawdataReader.h
libs/interfaces/RawdataReader/src/: RawdataReader.cc
libs/interfaces/Utils/: CMakeLists.txt
libs/interfaces/Utils/include/: CellID.h  Header.h  InfosFromFilename.h
libs/interfaces/Utils/src/: CellID.cc  Header.cc  InfosFromFilename.cc
libs/legacy/: CMakeLists.txt
libs/legacy/AHCAL/: CMakeLists.txt  README.md  setup.sh
libs/legacy/AHCAL/config/: config.yaml  setup.sh
libs/legacy/AHCAL/include/: DacManager.h  DatManager.h  Global.h  PedestalManager.h  config.h
libs/legacy/AHCAL/run/: README
libs/legacy/AHCAL/run/decode/: combined_mu+.yaml  config.yaml  decode.sh  e+.yaml  hep.sh  list_dat.txt  mu+.yaml
libs/legacy/AHCAL/src/: DacManager.cxx  DatManager.cxx  PedestalManager.cxx  config.cxx  main.cxx
libs/legacy/ECAL/: CMakeLists.txt
libs/legacy/ECAL/include/: RawtoRoot.h
libs/legacy/src/: Decode.cxx
libs/src/: Bits.cc
tests/: Buffer.test.cc  CMakeLists.txt  RawdataReader.test.cc
