missive(WARN "Build with RawdataReader interface")
add_library(RawDataReader src/RawdataReader.cc)
target_include_directories(RawDataReader PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/RawDataReader>)
set_target_properties(RawDataReader PROPERTIES PUBLIC_HEADER "include/RawdataReader.h")
target_link_libraries(RawDataReader PUBLIC RawdataDecoder::RawdataDecoder)
install(TARGETS RawDataReader EXPORT RawDataReaderTargets INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/RawdataDecoder/interfaces/RawDataReader" PUBLIC_HEADER DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/RawdataDecoder/interfaces/RawDataReader")
install(EXPORT RawDataReaderTargets FILE RawDataReaderTargets.cmake NAMESPACE RawdataDecoder:: DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/RawdataDecoder")
add_library(RawdataDecoder::Interface::RawDataReader ALIAS RawDataReader)
target_link_libraries(Interfaces INTERFACE RawdataDecoder::Interface::RawDataReader)
