find_package(yaml-cpp REQUIRED)
add_executable(hbuana src/main.cxx src/DatManager.cxx src/config.cxx)
target_link_libraries(hbuana PRIVATE ROOT::Core ROOT::Tree ROOT::Hist ROOT::Graf ROOT::Gpad yaml-cpp)
target_include_directories(hbuana PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
install(TARGETS hbuana DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
